--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,33 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <p>Enter your phrase:</p>
+    <form action="/piglatinize" method="POST">
+      <input type="text" name="user_phrase">
+      <input type="submit" id="Submit"/> 
+    </form>
+
   </body>
 </html>
+
+<!--
+
+    it "renders the instructions" do
+      expect(last_response.body).to include("Pig Latinizer!")
+    end
+
+    it "renders a new form element on the page" do
+      expect(last_response.body).to include("<form")
+      expect(last_response.body).to include("</form>")
+    end
+
+    it "renders the form directions on the page" do
+      expect(last_response.body).to include("Enter your phrase:")
+    end
+
+    it "renders the input field for the phrase" do
+      expect(last_response.body).to include("user_phrase")
+    end
+
+-->
